# zhiying

./: .gitignore  README.md  debug_i18n.py  debug_load.py  debug_output.txt  inject_i18n.py  patch_i18n.py  pyproject.toml  refactor_video_editor.py  requirements.txt  sync_i18n.py  translate_items.py  update_json_locales.py
.agents/skills/: SKILL.md
.agents/workflows/: push-version.md  setup.md
docs/: doc-v1.html  index.html
zhiying/: __init__.py  config.py  main.py
zhiying/api/: server.py
zhiying/cli/: agent_cmd.py  api_cmd.py  extension_cmd.py  init_cmd.py  skill_cmd.py  workflow_cmd.py
zhiying/core/: agent.py  ai_generator.py  ai_workflow_builder.py  brain.py  extension_manager.py  memory.py  ollama_utils.py  scheduler.py  skill.py  telegram_listener.py  workflow_engine.py
zhiying/extensions/: __init__.py
zhiying/extensions/auth_manager/: SKILL.md  __init__.py  commands.py  extension.py  routes.py
zhiying/extensions/browser/: 29.8.1_64.json  README_VERSION_SERVER.txt  SKILL.md  __init__.py  add_api_endpoints.py  add_global_settings_ui.py  agent.json  ai_engine.js  auth_status.json  browser_manager.js  check_versions.backup.php  (+37 more)
zhiying/i18n/: __init__.py  en.py  vi.py  zh.py
zhiying/nodes/: __init__.py  ai_node.py  api_request_node.py  base_node.py  browser_node.py  custom_node.py  google_auth_node.py  google_sheets_node.py  if_node.py  json_parser_node.py  loop_node.py  merge_node.py  model_agent_node.py  output_node.py  python_code_node.py  registry.py  run_command_node.py  switch_node.py  text_input_node.py
zhiying/skills/: default_skills.py
(+107 files in other folders)
